--- a/src/notebooks/testing-model-server.ipynb
+++ b/src/notebooks/testing-model-server.ipynb
@@ -45,7 +45,24 @@
     "\n",
     "        except DagsterGraphQLClientError as exc:\n",
     "            print(f\"Error checking job status: {exc}\")\n",
-    "            raise exc"
+    "            raise exc\n",
+    "\n",
+    "\n",
+    "def wait_until_model_ready(model_server_url, max_retries=10, timeout=15):\n",
+    "    \"\"\"Wait until the model is ready\"\"\"\n",
+    "    retry_count = 0\n",
+    "    while retry_count < max_retries:\n",
+    "        response = requests.get(f\"{model_server_url}/v2/models/diabetes-model/ready\")\n",
+    "        if response.status_code == 200:\n",
+    "            print(\"Ready\")\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Not ready, retrying in {} seconds\".format(timeout))\n",
+    "            time.sleep(timeout)\n",
+    "            retry_count += 1\n",
+    "    else:\n",
+    "        print(\"Model is not ready after {} retries\".format(max_retries))\n",
+    "\n"
    ]
   },
   {
@@ -146,7 +163,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "wait_until_model_ready(model_server_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "response = requests.post(\n",
     "    f\"{model_server_url}/invocations\",\n",
     "    json={\"dataframe_split\": {\"columns\": diabetes_result.columns.to_list(), \"data\": diabetes_result.values.tolist()}},\n",
@@ -162,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
    },
@@ -172,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "source": [
     "#### Setup for Dagster built MLflow container"
@@ -181,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "source": [
     "### Setup for Seldom mlserver"
@@ -201,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "source": [
     "### Calls to server"
@@ -233,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,22 +330,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "source": [
     "##### Force model unload/load with curl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "\n",
-    "curl -s  -X POST \"${MODEL_SERVER_URL}/v2/repository/models/${MODEL_NAME}/unload\"\n"
    ]
   },
   {
@@ -331,12 +345,24 @@
    "source": [
     "%%bash\n",
     "\n",
+    "curl -s  -X POST \"${MODEL_SERVER_URL}/v2/repository/models/${MODEL_NAME}/unload\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
     "curl -s -X POST \"${MODEL_SERVER_URL}/v2/repository/models/${MODEL_NAME}/load\" | jq\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "source": [
     "Check model status with repository index call"
@@ -345,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "source": [
     "#### Using Custom docker container model-server"
@@ -367,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
